# bound

./: .gitignore  .kaptainignore  AGENTS.md  Cargo.toml  README.md  kaptaind.toml  main.rs
.kaptaind/: ast_cache.json  daemon.out  status.json  telemetry.json  traces.db  version_cache.json
.kaptaind/analysis/: 025b4782-1838-4fd0-8e80-30e168b7b125.json  09aa1869-79b6-4b2d-9fec-5188fc1af053.json
assets/demos/: basic.tape  filter.tape  json.tape
src/: expandable.rs  furnace.rs  logging.rs  main.oip.backup  main.rs  metadata.rs  telemetry.rs  tree.rs
